fix leftbar icon and text not aligned

--- a/client/src/style/leftbar.css
+++ b/client/src/style/leftbar.css
@@ -16,7 +16,7 @@
   list-style: none;
 }
 
-.leftbarListItem {
+.leftbarListItem a {
   display: flex;
   align-items: center;
   margin-bottom: 20px;
